Wed Feb 16 00:56:28 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/fpa_immediate.s: New.
	* regression/tests_pass/fp.s: Avoid using F0/R0.
	* help_cop.c, help_cop.h (help_copAddr): Add stack parameter.
	* m_cop.c (coprocessor): Also test on coprocessor 2.
	* option.c (getPrec): Rename to GetFPAPrecision.
	(getRound): Rename to GetFPARounding.
	(optionCondOptPrecRound): Remove.
	* option.h (optionCondOptPrecRound): Remove.
	(PRECISION_MASK): Add.
	* m_copmem.c (dstmem): Add literal parameter.
	* m_fpu.c (CheckFPUsageIsAllowedAndGiveHWWarning): Add.
	(m_fdv,m_fml,m_frd): Warn when used in non-single precision.
	(m_pol,m_pow,m_rpw,m_acs,m_asn,m_atn,m_cos,m_exp,m_lgn,m_log,m_sin,
	m_tan): Warn these will never be hardware accelerated.
	(dstmemx): Add bool return value and return true when mnemonic is not
	recognized.

Sat Feb 12 16:02:33 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* m_fpu.c (CheckFPUsageIsAllowed): Move all soft-float option testing
	to here.

Wed Feb  2 01:46:54 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/apcs.s: Moved to...
	* regression/tests_pass/environment_variable.s: ...here.
	* regression/hdr: Moved to...
	* regression/tests_pass/include/hdr: ...here.
	* regression/Makefile: Add support for RUNOPT.
	* regression/tests_pass/apcs-3-32bit.s,
	regression/tests_pass/apcs-3-26bit.s,
	regression/tests_pass/apcs-none.s,
	regression/tests_pass/apcs-3.s,
	regression/tests_pass/apcs-3-reentrant.s,
	regression/tests_pass/apcs-3-reentrant-noswstackcheck.s,
	regression/tests_pass/include/predef_reg_test.s
	: New.
	* symbol.c: Fix conditional defined of CPU symbol registers based
	on -APCS option.
	* main.c, main.h: Support -APCS option, remove -apcs26, -apcs32,
	-apcsfpv2 and -apcsfpv3 options.
	* lexAcorn.c, area.c, option.c: Follow -APCS option support.

Thu Jan 27 02:35:32 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* m_fpumem.c, m_fpumem.h: Merge content to...
	* m_fpu.c, m_fpu.h: ...here.